[gd_scene load_steps=10 format=3 uid="uid://cw7aw6kyscnr3"]

[ext_resource type="Script" uid="uid://7k1u4hl4fk3c" path="res://scripts/pause_menu.gd" id="1_7l7mv"]
[ext_resource type="FontFile" uid="uid://dr66hxrghfog" path="res://assets/fonts/Kenney Blocks.ttf" id="1_kukqi"]
[ext_resource type="FontFile" uid="uid://cfswnxvtjohbp" path="res://assets/fonts/Kenney Pixel.ttf" id="2_5d2l8"]
[ext_resource type="Texture2D" uid="uid://cb0f4nwr72r0l" path="res://assets/ui/UI_Flat_IconPlay01a.png" id="4_7l7mv"]
[ext_resource type="AudioStream" uid="uid://b763pb6pgcjn0" path="res://sounds/switch30.ogg" id="5_v4r4p"]

[sub_resource type="Animation" id="Animation_1s2dm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.039215688, 0.1764706, 0.3529412)]
}

[sub_resource type="Animation" id="Animation_v4r4p"]
resource_name = "fade in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.039215688, 0.1764706, 0), Color(0, 0.039215688, 0.1764706, 0.3529412)]
}

[sub_resource type="Animation" id="Animation_88e76"]
resource_name = "fade out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.039215688, 0.1764706, 0.3529412), Color(0, 0.039215688, 0.1764706, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_88e76"]
_data = {
&"RESET": SubResource("Animation_1s2dm"),
&"fade in": SubResource("Animation_v4r4p"),
&"fade out": SubResource("Animation_88e76")
}

[node name="Pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7l7mv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1282.0
offset_bottom = 718.0
color = Color(0, 0.039215688, 0.1764706, 0.3529412)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_88e76")
}

[node name="BoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 428.0
offset_top = 103.0
offset_right = 786.0
offset_bottom = 466.0

[node name="RichTextLabel" type="RichTextLabel" parent="BoxContainer"]
custom_minimum_size = Vector2(9.545, 46.14)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_kukqi")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[shake freq=0.8][center]GAME PAUSED"

[node name="ColorRect" type="ColorRect" parent="BoxContainer"]
custom_minimum_size = Vector2(0, 91.475)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="TextureButton" type="Button" parent="BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5d2l8")
theme_override_font_sizes/font_size = 55
text = "Resume"
icon = ExtResource("4_7l7mv")
flat = true

[node name="TextureButton2" type="Button" parent="BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5d2l8")
theme_override_font_sizes/font_size = 55
text = "Restart"
icon = ExtResource("4_7l7mv")
flat = true

[node name="TextureButton3" type="Button" parent="BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5d2l8")
theme_override_font_sizes/font_size = 55
text = "Quit Game"
icon = ExtResource("4_7l7mv")
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_v4r4p")

[connection signal="pressed" from="BoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="BoxContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="BoxContainer/TextureButton3" to="." method="_on_texture_button_3_pressed"]
